adding login page, product page, updation on index, about us page, adding mail service in contact form, updating order and images, mysql connection setiup

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -34,6 +34,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		});
 	</script>
 	<!-- start-smoth-scrolling -->
+
+	<style>
+	@media screen and (min-width: 768px) {
+		.img-height{
+height: 650px;
+		}
+	}
+
+	@media screen and (max-width: 769px) {
+		.img-height{
+height: 280px;
+		}
+	}
+</style>
+
 </head>
 
 <body>
@@ -56,24 +71,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="w3_agileits_contact_grids">
 			<div style="margin: 0px 20px;" class="col-md-5 w3_agileits_contact_grid_left">
 				<div class="agile_map">
-					<img src="images/s6.jpg" alt="" />
+					<img class="img-height" src="images/s5.png" alt="" />
 				</div>
 			</div>
 			<div style="padding: 20px;">
-				AtoZ Online Mart
+				<u>AtoZ Online Mart</u><br>
 				Spare more with our organization. We give you the most minimal costs on the entirely of your grocery
-				needs.
+				needs.<br><br>
 				We are a trusted enterprise in your city Kosi Kalan running business from last 20+ years, We never
 				compromise with quality and offers you the best quality at reasonable prices.
+				<br><br>
 				A to Z Online Mart is your city's biggest online general & grocery store with 1600+ products and 200+
 				brands in our list.<br><br> You will discover all that you are searching for. Appropriate from Rice, spices,
-				beverages to personal care and stationary items- We have everything.
+				beverages to personal care and stationary items- <strong>we have everything.</strong>
+				<br><br>
 				Browse a wide scope of choices in each class, solely handpicked to enable you to locate the best quality
 				accessible at the least costs. Select an availability & your request will be conveyed ideal to your
 				doorstep, at any place in Kosi Kalan.<br><br>
 				We are following all safety measures in delivering the products to you in the most safest way.
+				<br><br>
 				We also add new products on daily basis. Keep browsing our website and stay in touch with us on our
 				social media handles for more exciting offers.
+				<br><br>
 				You can pay as per your convenience through Google Pay, PhonePe or Paytm. We are also offering Cash on
 				Delivery.<br>
 				We ensure that your time will be saved & you will receive best quality. Sit relax & get your products
