--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,7 +181,7 @@ button.w3view-cart:focus{
 	outline:none;
 }
 .logo_products {
-    padding: 10px 0;
+    padding: 10px 0 0px;
 }
 .w3ls_logo_products_left {
     float: left;
@@ -345,8 +345,7 @@ ul.multi-column-dropdown h6 {
     left: 43%;
 }
 .agile_top_brand_left_grid{
-	background: #FFFFFF;
-    padding: .5em;
+	padding: .5em;
 	position:relative;
 }
 .agile_top_brand_left_grid_pos{
@@ -1436,22 +1435,7 @@ ul.paging {
 .categories ul.cate,.new-products-grids{
 	padding:2em;
 }
-.categories ul li{
-	display:block;
-	color:#999;
-	font-size:14px;
-	margin-bottom:1em;
-}
-.categories ul li a{
-	color:#999;
-	text-decoration:none;
-}
-.categories ul li a:hover{
-	color:#3399cc;
-}
-.categories ul li span{
-	float:right;
-}
+
 ul.cate ul{
 	margin-left:2em;
 }
@@ -1985,7 +1969,7 @@ a.callbacks1_s3.active,a.callbacks1_s3:focus{
 	border:3px double #fff;
 }
 .w3_agileits_contact_grid_right{
-	padding:0 4em 0 12em;
+	padding:60px 4em 0 12em;
 }
 .w3_agileits_contact_grid_right form{
 	padding:1em 0 0;
@@ -2002,17 +1986,17 @@ a.callbacks1_s3.active,a.callbacks1_s3:focus{
 }
 
 .input__field {
-	position: relative;
-	display: block;
-	float: right;
-	padding: 0.8em;
-	width: 60%;
-	border: none;
-	border-radius: 0;
-	background: #f0f0f0;
-	color: #aaa;
-	-webkit-appearance: none; /* for box shadows to show on iOS */
-	font-size: 14px;
+    display: block;
+    /* float: right; */
+    padding: 0.8em;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    background: #f0f0f0;
+    color: black;
+    -webkit-appearance: none;
+    font-size: 14px;
+    margin-bottom: 15px;
 }
 
 .input__field:focus {
@@ -2124,16 +2108,11 @@ a.callbacks1_s3.active,a.callbacks1_s3:focus{
     outline: none;
     width: 100%;
     background: #f5f5f5;
-    color: #212121;
+    color: black;
     padding: 10px;
     font-size: 14px;
     border: 1px solid #e4e4e4;
     min-height: 200px;
-    font-weight: bold;
-    margin: 2em 0 0;
-}
-.w3_agileits_contact_grid_right textarea::-webkit-input-placeholder {
-	color: #212121 !important;
 }
 .w3_agileits_contact_grid_right input[type="submit"] {
     outline: none;
