--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -6,7 +6,7 @@
 				<h3>Contact</h3>
 
 				<ul class="address">
-					<li style="text-align: center;"><i class="fa fa-home"></i>Shri Ram Provision Store, Lalaram marg, near Gurudwara, Ghantaghar</li>
+					<li><i class="fa fa-home"></i>Shri Ram Provision Store, Lalaram <span>marg, near Gurudwara, Ghantaghar</span></li>
 					<li><i class="far fa-envelope"></i><a href="mailto:atozonlinemart5@gmail.com">atozonlinemart5@gmail.com</a></li>
 					<li><i class="fas fa-phone"></i>(+91) 9219869825, 9045056444, <span>9997610265</span></li>
 				</ul>
@@ -22,20 +22,30 @@
 			<div class="col-md-3 w3_footer_grid">
 				<h3>Category</h3>
 				<ul class="info">
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Beauty & Cosmetic</a>
-					</li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Cooking Oils</a>
-					</li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Deo & Perfumes</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Health & Wellness</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Pickels</a>
-					</li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Cooking Oils</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Dry Fruits</a> </li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Pickels</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Upvass Special</a></li>
+					<ul style="margin-top: 10px;" class="faq">
+						<li><a style="color: #FE9126; margin-left: 25px;" href="/products" title="click here">See more..</a>
+							<ul>
+								<br>
+								<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Deo & Perfumes</a></li>
+								<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Choclate & Candies</a></li>
+								<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Disposable Items</a></li>
+								<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Handwash</a></li>
+								<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Mask & Sanitizer</a></li>
+								<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Spices</a></li>
+								<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/products">Namkeen & Papad</a></li>
+							</ul>
+						</li>
+					</ul>
 				</ul>
 			</div>
 			<div class="col-md-3 w3_footer_grid">
 				<h3>Profile</h3>
 				<ul class="info">
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Login</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/login">Login</a></li>
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
@@ -52,3 +62,28 @@
 </div>
 
 <!-- //footer -->
+
+	<!-- script for tabs -->
+	<script type="text/javascript">
+		$(function () {
+
+			var menu_ul = $('.faq > li > ul'),
+				menu_a = $('.faq > li > a');
+
+			menu_ul.hide();
+
+			menu_a.click(function (e) {
+				e.preventDefault();
+				if (!$(this).hasClass('active')) {
+					menu_a.removeClass('active');
+					menu_ul.filter(':visible').slideUp('normal');
+					$(this).addClass('active').next().stop(true, true).slideDown('normal');
+				} else {
+					$(this).removeClass('active');
+					$(this).next().stop(true, true).slideUp('normal');
+				}
+			});
+
+		});
+	</script>
+	<!-- script for tabs -->
