--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,31 @@
 	
 	<style>
+
+::-webkit-scrollbar {
+			width: 7px;
+		}
+
+		/* Track */
+
+		::-webkit-scrollbar-track {
+			background: #f1f1f1;
+			border-radius: 16px;
+		}
+
+		/* Handle */
+
+		::-webkit-scrollbar-thumb {
+			background: #888;
+			border-radius: 16px;
+		}
+
+		/* Handle on hover */
+
+		::-webkit-scrollbar-thumb:hover {
+			background: #555;
+		}
+
+
 				.icon-circle {
 			border-radius: 50%;
 			border: 1px solid black;
@@ -106,7 +132,7 @@
 								<div class="icon-item"><i class="fab fa-instagram"></i></div>
 							</div>
 						</a>
-						<a target="_blank" href="https://www.instagram.com/raghav_rv98/">
+						<a target="_blank" href="https://twitter.com/atoz_onlinemart?s=09">
 							<div class="icon-circle-social icon-circle-social-twitter">
 								<div class="icon-item"><i class="fab fa-twitter"></i></div>
 							</div>
