--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,12 +71,19 @@
 				text-shadow: 0 0 black;
 			}
 
+			.category-heading {
+			margin-top: 10px;
+			text-align: center;
+			font-size: 20px;
+			margin-bottom: 25px;
+		}
+
 		}
 
 		@media screen and (max-width: 769px) {
 			.card-body-category {
 				border-radius: 50% !important;
-				width: 220px !important;
+				width: 100% !important;
 				height: 220px !important;
 			}
 
@@ -101,12 +108,13 @@
 				z-index: 10;
 				text-shadow: 0 0 black;
 			}
-		}
 
-		.category-heading {
+			.category-heading {
 			margin-top: 10px;
 			text-align: center;
 			font-size: 20px;
+		}
+
 		}
 	</style>
 </head>
@@ -210,7 +218,7 @@
 									<p class="category-heading">Grocery</p>
 								</div>
 
-								<div class="clearfix"> </div>
+								<!-- <div class="clearfix"> </div> -->
 							</div>
 						</div>
 					</div>
@@ -287,7 +295,7 @@
 									</div>
 									<p class="category-heading">Cleaning & Household</p>
 								</div>
-								<div class="clearfix"> </div>
+								<!-- <div class="clearfix"> </div> -->
 							</div>
 						</div>
 					</div>
@@ -365,7 +373,7 @@
 									<p class="category-heading">Mask & Sanitizer</p>
 								</div>
 
-								<div class="clearfix"> </div>
+								<!-- <div class="clearfix"> </div> -->
 							</div>
 						</div>
 					</div>
@@ -443,7 +451,7 @@
 									<p class="category-heading">Disposable Items</p>
 								</div>
 
-								<div class="clearfix"> </div>
+								<!-- <div class="clearfix"> </div> -->
 							</div>
 						</div>
 					</div>
@@ -523,7 +531,7 @@
 									<p class="category-heading"></p>
 								</div>
 
-								<div class="clearfix"> </div>
+								<!-- <div class="clearfix"> </div> -->
 							</div>
 						</div>
 					</div>
