--- a/views/header.ejs
+++ b/views/header.ejs
@@ -142,7 +142,7 @@
 			</div>
 			<div style="margin-bottom:10px;" class="w3ls_logo_products_left">
 				<h1><a href="/"><img style="height: 65px;" src="images/logo.png" alt="" /></a></h1>
-				<p style="margin: 0px !important; color: #225C7C;">AtoZonlinemart</p>
+				<p style="margin: 0px !important; color: #225C7C;">A to Z online mart</p>
 			</div>
 			
 			<div style="margin-top: 15px !important; margin-bottom: 20px;" class="w3l_search">
