updating email id for contact form, font size reduced in nav bar, crop birthday photo, social icons placed at bottom and position changed

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -38,7 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<style>
 	@media screen and (min-width: 768px) {
 		.img-height{
-height: 650px;
+height: 589px;
 		}
 	}
 
@@ -66,12 +66,13 @@ height: 280px;
 	</div>
 	<!-- //breadcrumbs -->
 	<!-- contact -->
-	<div style="padding-top:25px;" class="about">
+	<div style="padding-top:25px;"class="about">
 		<h2 style="margin-bottom : 40px;" class="w3_agile_header">About Us</h2>
 		<div class="w3_agileits_contact_grids">
 			<div style="margin: 0px 20px;" class="col-md-5 w3_agileits_contact_grid_left">
 				<div class="agile_map">
 					<img class="img-height" src="images/s5.png" alt="" />
+					<h1 style="margin-top: 20px; text-align: center;">Happy Shopping</h1>
 				</div>
 			</div>
 			<div style="padding: 20px;">
@@ -97,8 +98,6 @@ height: 280px;
 				Delivery.<br>
 				We ensure that your time will be saved & you will receive best quality. Sit relax & get your products
 				delivered at your doorstep.
-				<br><br>
-				Happy Shopping
 			</div>
 			<div class="clearfix"> </div>
 		</div>
