--- a/views/header.ejs
+++ b/views/header.ejs
@@ -94,23 +94,26 @@
 			}
 			.icon-position{
 			position: absolute;
-    top: 4%;
-    left: 25%;
+    top: 2%;
+    right: 12%;
 		}
 		}
 
 		@media screen and (max-width: 769px) {
 			.icon-position-contact{
-				margin-top: 80px;
+				margin-top: 25px;
 			}
 
 			.icon-position{
 			position: absolute;
-    top: 4%;
+    top: 27%;
     left: 33%;
 		}
 	}
 
+.phone_email li{
+	margin-top: 10px;
+}
 	</style>
 	
 	<!-- header -->
@@ -121,31 +124,30 @@
 				<ul style="margin-top: -33px;" class="phone_email">
 					<li><span class="contact-icon-position"><i style="transform: rotate(116deg);" class="fas fa-phone"></i></span>For order call us : +91 9219869825</li>
 					<li style="margin-left: 9px;"><span class="contact-icon-position"><i class="fab fa-whatsapp"></i></span>Or whatsapp us: +91 9045056444</li>
-					<li><div class="icon-position">
-						<a target="_blank" href="https://www.facebook.com/atozonlinemart5/">
-							<div class="icon-circle-social icon-circle-social-fb">
-								<div class="icon-item"><i class="fab fa-facebook-f"></i></div>
-							</div>
-						</a>
-						<a target="_blank" href="https://www.instagram.com/atoz_onlinemart/">
-							<div class="icon-circle-social icon-circle-social-insta">
-								<div class="icon-item"><i class="fab fa-instagram"></i></div>
-							</div>
-						</a>
-						<a target="_blank" href="https://twitter.com/atoz_onlinemart?s=09">
-							<div class="icon-circle-social icon-circle-social-twitter">
-								<div class="icon-item"><i class="fab fa-twitter"></i></div>
-							</div>
-						</a>
-					</div></li>
 				</ul>
 			</div>
 			<div style="margin-bottom:10px;" class="w3ls_logo_products_left">
 				<h1><a href="/"><img style="height: 65px;" src="images/logo.png" alt="" /></a></h1>
 				<p style="margin: 0px !important; color: #225C7C;">A to Z online mart</p>
 			</div>
-			
-			<div style="margin-top: 15px !important; margin-bottom: 20px;" class="w3l_search">
+			<div class="icon-position">
+				<a target="_blank" href="https://www.facebook.com/atozonlinemart5/">
+					<div class="icon-circle-social icon-circle-social-fb">
+						<div class="icon-item"><i class="fab fa-facebook-f"></i></div>
+					</div>
+				</a>
+				<a target="_blank" href="https://www.instagram.com/atoz_onlinemart/">
+					<div class="icon-circle-social icon-circle-social-insta">
+						<div class="icon-item"><i class="fab fa-instagram"></i></div>
+					</div>
+				</a>
+				<a target="_blank" href="https://twitter.com/atoz_onlinemart?s=09">
+					<div class="icon-circle-social icon-circle-social-twitter">
+						<div class="icon-item"><i class="fab fa-twitter"></i></div>
+					</div>
+				</a>
+			</div>
+			<div style="margin-top: 45px !important; margin-bottom: 20px;" class="w3l_search">
 				<form action="#" method="post">
 					<input style="border-radius: 20px;" type="search" name="Search"
 						placeholder="Search for a Product..." required="">
