--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,38 +1,83 @@
-	
-	<style>
+<style>
+	::-webkit-scrollbar {
+		width: 7px;
+	}
 
-::-webkit-scrollbar {
-			width: 7px;
-		}
+	/* Track */
 
-		/* Track */
+	::-webkit-scrollbar-track {
+		background: #f1f1f1;
+		border-radius: 16px;
+	}
 
-		::-webkit-scrollbar-track {
-			background: #f1f1f1;
-			border-radius: 16px;
-		}
+	/* Handle */
 
-		/* Handle */
+	::-webkit-scrollbar-thumb {
+		background: #888;
+		border-radius: 16px;
+	}
 
-		::-webkit-scrollbar-thumb {
-			background: #888;
-			border-radius: 16px;
-		}
+	/* Handle on hover */
 
-		/* Handle on hover */
-
-		::-webkit-scrollbar-thumb:hover {
-			background: #555;
-		}
+	::-webkit-scrollbar-thumb:hover {
+		background: #555;
+	}
 
 
-				.icon-circle {
-			border-radius: 50%;
-			border: 1px solid black;
-			height: 30px;
-			width: 30px;
-			position: relative;
-			margin-top: 15px;
+	.icon-circle {
+		border-radius: 50%;
+		border: 1px solid black;
+		height: 30px;
+		width: 30px;
+		position: relative;
+		margin-top: 15px;
+	}
+
+	.icon-circle-social-fb:hover {
+		background-color: #3B5998;
+		color: white;
+		cursor: pointer;
+	}
+
+	.icon-circle-social-twitter:hover {
+		background-color: #0077B5;
+		color: white;
+		cursor: pointer;
+	}
+
+	.icon-circle-social-insta:hover {
+		background-color: #DE306B;
+		color: white;
+		cursor: pointer;
+	}
+
+	.icon-color {
+		color: black !important;
+	}
+
+	.icon-item {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		font-size: 20px;
+		transform: translate(-50%, -50%);
+	}
+
+	.icon-text {
+		position: absolute;
+		margin-top: -27px;
+		margin-left: 40px;
+	}
+
+	.contact-icon-position {
+		font-size: 20px;
+		margin-right: 6px;
+	}
+
+
+	@media screen and (min-width: 768px) {
+		.icon-position-contact {
+			margin-top: 40px;
 		}
 
 		.icon-circle-social {
@@ -46,117 +91,83 @@
 			color: black;
 		}
 
-		.icon-circle-social-fb:hover {
-			background-color: #3B5998;
-			color: white;
-			cursor: pointer;
-		}
-
-		.icon-circle-social-twitter:hover {
-			background-color: #0077B5;
-			color: white;
-			cursor: pointer;
-		}
-
-		.icon-circle-social-insta:hover {
-			background-color: #DE306B;
-			color: white;
-			cursor: pointer;
-		}
-
-		.icon-color {
-			color: black !important;
-		}
-
-		.icon-item {
+		.icon-position {
 			position: absolute;
-			top: 50%;
-			left: 50%;
-			font-size: 20px;
-			transform: translate(-50%, -50%);
-		}
-
-		.icon-text {
-			position: absolute;
-			margin-top: -27px;
-			margin-left: 40px;
-		}
-
-		.contact-icon-position{
-			font-size: 20px;
-    margin-right: 6px;
-		}
-
-
-		@media screen and (min-width: 768px) {
-			.icon-position-contact{
-				margin-top: 40px;
-			}
-			.icon-position{
-			position: absolute;
-    top: 2%;
-    right: 12%;
-		}
-		}
-
-		@media screen and (max-width: 769px) {
-			.icon-position-contact{
-				margin-top: 25px;
-			}
-
-			.icon-position{
-			position: absolute;
-    top: 27%;
-    left: 33%;
+			top: 2%;
+			right: 12%;
 		}
 	}
 
-.phone_email li{
-	margin-top: 10px;
-}
-	</style>
-	
-	<!-- header -->
+	@media screen and (max-width: 769px) {
+		.icon-position-contact {
+			margin-top: 25px;
+		}
 
-	<div class="logo_products">
-		<div class="container">
-			<div class="w3ls_logo_products_left1 icon-position-contact">
-				<ul style="margin-top: -33px;" class="phone_email">
-					<li><span class="contact-icon-position"><i style="transform: rotate(116deg);" class="fas fa-phone"></i></span>For order call us : +91 9219869825</li>
-					<li style="margin-left: 9px;"><span class="contact-icon-position"><i class="fab fa-whatsapp"></i></span>Or whatsapp us: +91 9045056444</li>
-				</ul>
-			</div>
-			<div style="margin-bottom:10px;" class="w3ls_logo_products_left">
-				<h1><a href="/"><img style="height: 65px;" src="images/logo.png" alt="" /></a></h1>
-				<p style="margin: 0px !important; color: #225C7C;">A to Z online mart</p>
-			</div>
-			<div class="icon-position">
-				<a target="_blank" href="https://www.facebook.com/atozonlinemart5/">
-					<div class="icon-circle-social icon-circle-social-fb">
-						<div class="icon-item"><i class="fab fa-facebook-f"></i></div>
-					</div>
-				</a>
-				<a target="_blank" href="https://www.instagram.com/atoz_onlinemart/">
-					<div class="icon-circle-social icon-circle-social-insta">
-						<div class="icon-item"><i class="fab fa-instagram"></i></div>
-					</div>
-				</a>
-				<a target="_blank" href="https://twitter.com/atoz_onlinemart?s=09">
-					<div class="icon-circle-social icon-circle-social-twitter">
-						<div class="icon-item"><i class="fab fa-twitter"></i></div>
-					</div>
-				</a>
-			</div>
-			<div style="margin-top: 45px !important; margin-bottom: 20px;" class="w3l_search">
-				<form action="#" method="post">
-					<input style="border-radius: 20px;" type="search" name="Search"
-						placeholder="Search for a Product..." required="">
-					<button style="border-radius: 25px;" type="submit" class="btn btn-default search"
-						aria-label="Left Align">
-						<i class="fa fa-search" aria-hidden="true"> </i>
-					</button>
-					<div class="clearfix"></div>
-				</form>
+		.icon-position {
+			margin-bottom: -30px;
+			text-align: center;
+		}
+
+		.icon-circle-social {
+			border-radius: 50%;
+			border: 1px solid black;
+			height: 30px;
+			width: 30px;
+			position: relative;
+			display: inline-block;
+			margin-right: 4px;
+			color: black;
+		}
+	}
+
+	.phone_email li {
+		margin-top: 10px;
+	}
+</style>
+
+<!-- header -->
+
+<div class="logo_products">
+	<div class="container">
+		<div class="w3ls_logo_products_left1 icon-position-contact">
+			<ul style="margin-top: -33px;" class="phone_email">
+				<li><span class="contact-icon-position"><i style="transform: rotate(116deg);"
+							class="fas fa-phone"></i></span>For order call us : +91 9219869825</li>
+				<li style="margin-left: 9px;"><span class="contact-icon-position"><i
+							class="fab fa-whatsapp"></i></span>Or whatsapp us: +91 9045056444</li>
+			</ul>
+		</div>
+		<div style="margin-bottom:10px;" class="w3ls_logo_products_left">
+			<h1><a href="/"><img style="height: 65px;" src="images/logo.png" alt="" /></a></h1>
+			<p style="margin: 0px !important; color: #225C7C;">A to Z online mart</p>
+		</div>
+		<div class="icon-position">
+			<a target="_blank" href="https://www.facebook.com/atozonlinemart5/">
+				<div class="icon-circle-social icon-circle-social-fb">
+					<div class="icon-item"><i class="fab fa-facebook-f"></i></div>
+				</div>
+			</a>
+			<a target="_blank" href="https://www.instagram.com/atoz_onlinemart/">
+				<div class="icon-circle-social icon-circle-social-insta">
+					<div class="icon-item"><i class="fab fa-instagram"></i></div>
+				</div>
+			</a>
+			<a target="_blank" href="https://twitter.com/atoz_onlinemart?s=09">
+				<div class="icon-circle-social icon-circle-social-twitter">
+					<div class="icon-item"><i class="fab fa-twitter"></i></div>
+				</div>
+			</a>
+		</div>
+		<div style="margin-top: 45px !important; margin-bottom: 20px;" class="w3l_search">
+			<form action="#" method="post">
+				<input style="border-radius: 20px;" type="search" name="Search" placeholder="Search for a Product..."
+					required="">
+				<button style="border-radius: 25px;" type="submit" class="btn btn-default search"
+					aria-label="Left Align">
+					<i class="fa fa-search" aria-hidden="true"> </i>
+				</button>
+				<div class="clearfix"></div>
+			</form>
 			<div class="clearfix"> </div>
 		</div>
 	</div>
