autofill search complete, changes in ux according to need and all complete except authorisation

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -171,7 +171,7 @@
 				</div>
 			</div>
 			<div class="scrollbar-product" class="col-md-9 products-right">
-				<% if(subCategoryId.length != 0) { %><h4 style="margin-bottom : 20px;" class="w3_agile_header">
+				<% if(subCategoryId.length != 0) { %><h4 style="margin-bottom : 20px; margin-left: 5px;" class="w3_agile_header">
 					<%= displaySubCategoryId%>
 				</h4> <% } %>
 
