--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -48,11 +48,12 @@
 				<h3>Contact</h3>
 
 				<ul style="margin-bottom: 55px;" class="address">
-					<li><i class="fa fa-home"></i>Shri Ram Provision Store, Lalaram <span>marg, near Gurudwara,
-							Ghantaghar</span></li>
-					<li><i class="far fa-envelope"></i><a
-							href="mailto:atozonlinemart5@gmail.com">atozonlinemart5@gmail.com</a></li>
-					<li><i class="fas fa-phone"></i>(+91) 9219869825, 9045056444, <span>9997610265</span></li>
+					<li><i class="fa fa-home"></i>Pramod Kumar Agrawal<br> <span>Shri Ram Provision Store, Lalaram</span> <span>marg, near Gurudwara,
+							Ghantaghar</span>
+						<span>Kosi kalan, Mathura-281403</span></li>
+					<li><i style="transform: rotate(90deg);" class="fas fa-phone"></i>+91 9045055444, 9219869825, <span>9997610265</span></li>
+					<li><i class="fab fa-whatsapp"></i>+91 9045055444, 9219869825, <span>9997610265</span></li>
+					<li><i class="far fa-envelope"></i><a href="mailto:atozonlinemart5@gmail.com">atozonlinemart5@gmail.com</a></li>
 				</ul>
 			</div>
 			<div id="icon-position">
