--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -61,15 +61,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-6 w3_agileits_contact_grid_right">
+				<% if (successMessage.length > 0) { %>
+					<div class="alert alert-success col-sm-12"><%= successMessage %></div>
+					<% } %>
+	
 				<h2 class="w3_agile_header">Leave a<span> Message</span></h2>
 
-				<form action="/contact" method="post">
+				<form action="/contact-enquiry" method="post">
 					<!-- <span class="input input--ichiro">
 					</span> -->
 					<input style="border-radius:10px" class="input__field" type="text" name="name"
 						placeholder="Your Name" required />
 					<input style="border-radius:10px" class="input__field" type="email" name="emailId"
 						placeholder="Your Email" required />
+					<input type="tel" name="phone" pattern="[1-9]{1}[0-9]{9}" title="Enter 10 digit mobile number"
+					style="border-radius:10px" class="input__field" placeholder="Phone Number" required>
 					<!-- <span class="input input--ichiro">
 					</span> -->
 					<textarea style="border-radius:10px" name="message" placeholder="Your message here..."
