--- a/views/index.ejs
+++ b/views/index.ejs
@@ -175,9 +175,7 @@
 											<figure>
 												<div class="snipcart-item block">
 													<div class="snipcart-thumb">
-														<a href="/user/<%= productCategoryList[i].name%>"><img
-																class="category-img" title=" " alt=" "
-																src="http://localhost:3001/images/<%= productCategoryList[i].name%>.png" /></a>
+														<a href="/user/<%= productCategoryList[i].name%>"><img class="category-img" title=" " alt="product Image" src="http://localhost:3001/images/<%= productCategoryList[i].name%>.png" /></a>
 													</div>
 												</div>
 											</figure>
